--- a/report-notebook/pwned-passwords-final-report.ipynb
+++ b/report-notebook/pwned-passwords-final-report.ipynb
@@ -1984,6 +1984,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Reflection\n",
+    "Dealing with passwords can involve sensitive data. Working on this project has given me the chance to attempt to work with compromised passwords dataset without actually exposing them. The process is inspired by Troy Hunt's decision to release a hashed password dataset instead of just releasing the actual password.  \n",
+    "This project is also challlenging when it comes to reproducibility. More than a data visualization project, this notebook include complicated Python scripts to generate and hash permutations of possible passwords so that they can be checked against the hashed password dataset by Troy. Some of the script is extremely compute-intensive and that may affect the reproducibility. As such, the decision to include a checkpoint file was make to allow quick verification of the findings in this report. For individuals who wish to dive further, the boolean values of \"checkpoint\" and \"keyboard_rerun\" can be changed to accommodate such endeavor.  \n",
+    "Coming up with the categories of the password was also a human centric process. Users tend to use something they are familiar with as their passwords since forgetting the passwords can be very inconvenient. This compels us to create some sort of mnemonic to help us remember. Following this train of thought has led to the categories of keyboard walk and date-formatted passwords. Other potential categories are phone number, addresses and words or phrases from rhymes. These categories were not considered partly due to time contraints and their complexity."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
