--- a/report-notebook/pwned-passwords-final-report.ipynb
+++ b/report-notebook/pwned-passwords-final-report.ipynb
@@ -1508,6 +1508,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Fruther exploration 2\n",
+    "The most common password length appears to be between 6-8 character. The trend is evident in both dictionary attack and keyboard walk type of passwords. Interestingly, there is a dip in 7-character long keyboard walk type of password. This could be because the nature of the keyboard layout. Generating a 7-letter sequence on a keyboard does not form a memorable patter and hence users are likely to opt for 6 or 8 letter passwords instead."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Research Qn. 2:\n",
     "How do the counts of the different categories of compromised passwords change within a year?  \n",
     "To answer this, we need to merge both dataframe versions and compare the changes in the count value"
